test/sema/type-not-specified-to-implement-interface.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

interface X {
    void foo();
    void bar();
    void qux();
}

struct Y {
    void foo() {}
    void bar() {}
    void qux() {}
}

void f<T: X>(T t) {}

void main() {
    // CHECK: [[@LINE+1]]:6: error: type 'Y' doesn't implement interface 'X'
    f(Y());
}
